<resources>
    <string name="app_name">Animal Quiz</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="question_text">This is Animal %1$d of %2$d</string>

    <string name="number_of_gusses_title">Number Of Guesses</string>
    <string name="number_of_gusses_description">show 2,4 or 6 options</string>
    <string name="animal_types_title">Animals</string>
    <string name="animal_type_description">Animals you can include in the quiz</string>
    <string name="choose_background_color">Choose background color</string>
    <string name="choose_color_descreption">This color will be your screen background color</string>
    <string name="default_color_black">Black</string>
    <string name="choose_font">Font</string>
    <string name="choose_font_description">Choose font</string>
    <string name="default_font">Chunkfive.otf</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="results_string_vaue">1$d number of guesses , and %2$.02f%% correct</string>
    <string name="reset_animal_quiz">Restart Quiz</string>
    <string name="wrong_answer_message">No !</string>
    <string name="default_animal_type">Wild_Animals</string>
</resources>