<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/number_of_gusses_list"
        android:entryValues="@array/number_of_gusses_list"
        android:key="settings_numberOfGusses"
        android:title="@string/number_of_gusses_title"
        android:summary="@string/number_of_gusses_description"
        android:persistent="true"
        android:defaultValue="4"/>

    <MultiSelectListPreference
        android:entries="@array/types_of_animals"
        android:entryValues="@array/types_of_animals_values"
        android:key="settingsAnimalType"
        android:title="@string/animal_types_title"
        android:summary="@string/animal_type_description"
        android:persistent="true"
        android:defaultValue="@array/types_of_animals_values"/>

    <ListPreference
        android:entries="@array/colors"
        android:entryValues="@array/colors"
        android:key="settings_quiz_background_color"
        android:title="@string/choose_background_color"
        android:summary="@string/choose_color_descreption"
        android:persistent="true"
        android:defaultValue="@string/default_color_black"/>

    <ListPreference
        android:entries="@array/fonts"
        android:entryValues="@array/font_values"
        android:key="settings_quiz_fonts"
        android:title="@string/choose_font"
        android:summary="@string/choose_font_description"
        android:persistent="true"
        android:defaultValue="@string/default_font"/>

</PreferenceScreen>